--- a/juego.html
+++ b/juego.html
@@ -31,6 +31,9 @@
           <div id="pieza1">
 
           </div>
+          <div id="pieza2">
+
+          </div>
       </div>
     </div>
     <div id="footer">
